Mon Jun 25 20:56:38 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * MPC/config/dds_suppress_any_support.mpb:
        * dds/DdsDcps.mpc:

          For dds_suppress_anys=0 only, need to link against TAO_AnyTypeCode.

Mon Jun 25 20:52:21 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * examples/DCPS/IntroductionToOpenDDS/StockQuoter.mpc:

          Added required "after" for TAO's Svc_Utils.

        * examples/DCPS/ishapes/README:

          Removed invalid reference to HTML documentation.

Mon Jun 25 18:50:31 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/dcps_tests.lst:
          Inconsistent_Qos test is dependent on DDS4CCM_OPENDDS

        * dds/DCPS/ContentFilteredTopicImpl.h:
          Doxygen fix

Mon Jun 25 09:30:06 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * bin/dcps_tests.lst:
        * dds/DCPS/QOS_XML_Handler/XML_File_Intf.h:
        * tests/DCPS/Inconsistent_Qos:
        * tests/DCPS/Inconsistent_Qos/Inconsistent_Qos.mpc:
        * tests/DCPS/Inconsistent_Qos/Messenger.idl:
        * tests/DCPS/Inconsistent_Qos/Messenger_export.h:
        * tests/DCPS/Inconsistent_Qos/deadline.xml:
        * tests/DCPS/Inconsistent_Qos/inconsistent_qos.cpp:
        * tests/DCPS/Inconsistent_Qos/rtps_disc.ini:
        * tests/DCPS/Inconsistent_Qos/run_test.pl:
        * tests/DCPS/Inconsistent_Qos/sample_rejected.xml:
          Added test/reproducer which reprocudes an issue in parsing
          the datawriter QOS. It returns an invalid QOS error without
          mentioning the error itself.

Fri Jun 22 22:55:29 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:
          Corrected setting max_instances restriction.

        * tests/DCPS/RegisterInstance/register_instance.cpp:
        * tests/DCPS/RegisterInstance/run_test.pl:
          Corrected test to expect correct output and put error messags into
          a separate output file.
