@@ -4,51 +4,30 @@
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xsi:schemaLocation="http://www.omg.org/dds dds_qos.xsd">
   <qos_profile name="InconsistentQos">
-     <datawriter_qos>
-          <reliability>
-               <kind>BEST_EFFORT_RELIABILITY_QOS</kind>
-               <max_blocking_time>
-                    <sec>1</sec>
-                    <nanosec>0</nanosec>
-               </max_blocking_time>
-         </reliability>
-          <durability>
-               <kind>TRANSIENT_DURABILITY_QOS</kind>
-          </durability>
-          <history>
-               <kind>KEEP_ALL_HISTORY_QOS</kind>
-               <depth>2</depth>
-          </history>
-          <deadline>
-               <period>
-                    <sec>2</sec>
-                    <nanosec>0</nanosec>
-               </period>
-          </deadline>
-     </datawriter_qos>
-    <datareader_qos>
-          <reliability>
-               <kind>BEST_EFFORT_RELIABILITY_QOS</kind>
-          </reliability>
-          <history>
-               <kind>KEEP_ALL_HISTORY_QOS</kind>
-               <depth>1</depth>
-          </history>
-          <durability>
-                 <kind>TRANSIENT_DURABILITY_QOS</kind>
-          </durability>
-          <time_based_filter>
-               <minimum_separation>
-                    <sec>1</sec>
-                    <nanosec>50000000</nanosec>
-               </minimum_separation>
-          </time_based_filter>
-          <deadline>
-               <period>
-                    <sec>2</sec>
-                    <nanosec>0</nanosec>
-               </period>
-          </deadline>
-     </datareader_qos>
+    <datawriter_qos>
+      <reliability>
+        <kind>RELIABLE_RELIABILITY_QOS</kind>
+        <max_blocking_time>
+          <sec>2</sec>
+          <nanosec>0</nanosec>
+        </max_blocking_time>
+      </reliability>
+      <durability>
+        <kind>TRANSIENT_DURABILITY_QOS</kind>
+      </durability>
+      <durability_service>
+        <history_kind>KEEP_LAST_HISTORY_QOS</history_kind>
+          <history_depth>10</history_depth>
+          <max_samples>10</max_samples>
+          <max_instances>2</max_instances>
+          <max_samples_per_instance>10</max_samples_per_instance>
+      </durability_service>
+      <deadline>
+        <period>
+          <sec>3</sec>
+          <nanosec>0</nanosec>
+        </period>
+      </deadline>
+    </datawriter_qos>
   </qos_profile>
 </dds>
