@@ -4,88 +4,24 @@
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xsi:schemaLocation="http://www.omg.org/dds dds_qos.xsd">
   <qos_profile name="InconsistentQos">
-     <datawriter_qos>
-          <reliability>
-               <kind>BEST_EFFORT_RELIABILITY_QOS</kind>
-               <max_blocking_time>
-                    <sec>0</sec>
-                    <nanosec>100000000</nanosec>
-               </max_blocking_time>
-         </reliability>
-          <durability>
-               <kind>TRANSIENT_DURABILITY_QOS</kind>
-          </durability>
-          <durability_service>
-               <history_kind>KEEP_LAST_HISTORY_QOS</history_kind>
-               <history_depth>10</history_depth>
-               <max_samples>10</max_samples>
-               <max_instances>2</max_instances>
-               <max_samples_per_instance>5</max_samples_per_instance>
-          </durability_service>
+    <datawriter_qos>
+      <reliability>
+        <kind>BEST_EFFORT_RELIABILITY_QOS</kind>
+        <max_blocking_time>
+          <sec>0</sec>
+          <nanosec>100000000</nanosec>
+        </max_blocking_time>
+      </reliability>
+      <durability>
+        <kind>TRANSIENT_DURABILITY_QOS</kind>
+      </durability>
+      <durability_service>
+        <history_kind>KEEP_LAST_HISTORY_QOS</history_kind>
+        <history_depth>10</history_depth>
+        <max_samples>10</max_samples>
+        <max_instances>2</max_instances>
+        <max_samples_per_instance>10</max_samples_per_instance>
+      </durability_service>
     </datawriter_qos>
-    <datareader_qos>
-          <durability>
-                 <kind>VOLATILE_DURABILITY_QOS</kind>
-          </durability>
-          <deadline>
-               <period>
-                    <sec>DURATION_INFINITE_SEC</sec>
-                    <nanosec>DURATION_INFINITE_NSEC</nanosec>
-               </period>
-          </deadline>
-          <latency_budget>
-               <duration>
-                    <sec>0</sec>
-                    <nanosec>0</nanosec>
-               </duration>
-          </latency_budget>
-          <liveliness>
-               <kind>AUTOMATIC_LIVELINESS_QOS</kind>
-               <lease_duration>
-                    <sec>DURATION_INFINITE_SEC</sec>
-                    <nanosec>DURATION_INFINITE_NSEC</nanosec>
-               </lease_duration>
-          </liveliness>
-          <reliability>
-               <kind>BEST_EFFORT_RELIABILITY_QOS</kind>
-               <max_blocking_time>
-                    <sec>0</sec>
-                    <nanosec>100000000</nanosec>
-               </max_blocking_time>
-          </reliability>
-          <destination_order>
-                <kind>BY_RECEPTION_TIMESTAMP_DESTINATIONORDER_QOS</kind>
-          </destination_order>
-          <history>
-               <kind>KEEP_LAST_HISTORY_QOS</kind>
-               <depth>10</depth>
-          </history>
-          <resource_limits>
-               <initial_samples>1</initial_samples>
-               <initial_instances>1</initial_instances>
-               <max_samples>10</max_samples>
-               <max_instances>1</max_instances>
-               <max_samples_per_instance>10</max_samples_per_instance>
-          </resource_limits>
-          <ownership>
-               <kind>SHARED_OWNERSHIP_QOS</kind>
-          </ownership>
-          <time_based_filter>
-               <minimum_separation>
-                    <sec>0</sec>
-                    <nanosec>0</nanosec>
-               </minimum_separation>
-          </time_based_filter>
-          <reader_data_lifecycle>
-               <autopurge_nowriter_samples_delay>
-                    <sec>DURATION_INFINITE_SEC</sec>
-                    <nanosec>DURATION_INFINITE_NSEC</nanosec>
-               </autopurge_nowriter_samples_delay>
-               <autopurge_disposed_samples_delay>
-                    <sec>DURATION_INFINITE_SEC</sec>
-                    <nanosec>DURATION_INFINITE_NSEC</nanosec>
-               </autopurge_disposed_samples_delay>
-          </reader_data_lifecycle>
-     </datareader_qos>
   </qos_profile>
 </dds>
