@@ -1,3 +1,14 @@
+Tue Jun 26 09:29:53 UTC 2012  Marcel Smit  <msmit@remedy.nl>
+
+        * tests/DCPS/Inconsistent_Qos/inconsistent_qos.cpp:
+          Allways retrieve the default qos first before retrieving
+          the actual QOS from file.
+
+        * tests/DCPS/Inconsistent_Qos/deadline.xml:
+        * tests/DCPS/Inconsistent_Qos/sample_rejected.xml:
+          Fixed inconsistencies. history depth should be
+          less than resources_limits.max_samples_per_instance.
+
 Mon Jun 25 20:56:38 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * MPC/config/dds_suppress_any_support.mpb:
